hw_l5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-service
  namespace: otus
spec:
  selector:
    app: service-app
  ports:
    - protocol: TCP
      port: 10000
      targetPort: web-port
  type: NodePort
