hw_l5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-app-ingress
  namespace: otus
  annotations:
    kubernetes.io/ingress.class: “nginx”
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/zvezdin/(.*)
        pathType: Prefix
        backend:
          service:
            name: service-app-service
            port:
              number: 10000
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: service-app-service
            port:
              number: 10000
